Linter changes